feat: Add POST search version
